// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Format numbers when x-axis, y-axis, break by / point, color, and size 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    x<br><span style="color:#FFF; font-size: 15px; line-height: 18px">$22.1</span><hr style="margin: 7px 0px" class="csdk-border-t">y<br><span style="color:#FFF; font-size: 15px; line-height: 18px">!2.2</span><hr style="margin: 7px 0px" class="csdk-border-t">p<br><span style="color:#FFF; font-size: 15px; line-height: 18px">13.57976</span><hr style="margin: 7px 0px" class="csdk-border-t">c<br><span style="color:#FFF; font-size: 15px; line-height: 18px">3.1456</span><hr style="margin: 7px 0px" class="csdk-border-t">x<br><span style="color:#FFF; font-size: 15px; line-height: 18px">@12.3</span>
  </div>"
`;

exports[`Scatter tooltip > When only break by / color 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    <span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t"><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Sisense</span>
  </div>"
`;

exports[`Scatter tooltip > When only break by / point 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    <span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t"><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Sisense</span>
  </div>"
`;

exports[`Scatter tooltip > When only size 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    <span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t"><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span>
  </div>"
`;

exports[`Scatter tooltip > When only x-axis 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t"><span style="color:#FFF; font-size: 15px; line-height: 18px">0</span>
  </div>"
`;

exports[`Scatter tooltip > When only y-axis 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    <span style="color:#FFF; font-size: 15px; line-height: 18px">0</span><hr style="margin: 7px 0px" class="csdk-border-t">Category<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span>
  </div>"
`;

exports[`Scatter tooltip > When x-axis and y-axis (call through options) 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t">Category<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span>
  </div>"
`;

exports[`Scatter tooltip > When x-axis, y-axis and break by / point 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t">Category<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Sisense</span>
  </div>"
`;

exports[`Scatter tooltip > When x-axis, y-axis, break by / point and size 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t">Category<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Sisense</span><hr style="margin: 7px 0px" class="csdk-border-t">Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">124</span>
  </div>"
`;

exports[`Scatter tooltip > When x-axis, y-axis, break by / point, color, and size 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">
    Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">10M</span><hr style="margin: 7px 0px" class="csdk-border-t">Category<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Apple</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Sisense</span><hr style="margin: 7px 0px" class="csdk-border-t">Brand<br><span style="color:#FFF; font-size: 15px; line-height: 18px">Google</span><hr style="margin: 7px 0px" class="csdk-border-t">Total Costs<br><span style="color:#FFF; font-size: 15px; line-height: 18px">124</span>
  </div>"
`;
